force-app/main/default/objects/Dish__c/fields/ImageUrl__c.field-meta.xml
<CustomField>
    <fullName>ImageUrl__c</fullName>
    <label>ImageUrl</label>
    <required>true</required>
    <type>Url</type>
</CustomField>