force-app/main/default/objects/Dish__c/fields/Is_Present__c.field-meta.xml
<CustomField>
    <fullName>Is_Present__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Present</label>
    <type>Checkbox</type>
</CustomField>